<resources>
    <string name="app_name">Check&amp;Share</string>
    <string name="action_settings">Settings</string>
    <string name="image_path">kubota</string>

    <!-- Main -->
    <string name="main_enter_store_button">เข้าระบบร้าน</string>
    <string name="main_ofline_button">เริ่มงานใหม่แบบไม่มีอินเตอร์เน็ต</string>
    <string name="main_button_yes">ใช่</string>
    <string name="main_button_no">ไม่ใช่</string>


    <!-- Login -->
    <string name="login_store_title">เข้าสู่ระบบร้าน</string>
    <string name="login_store_id_hint">รหัสร้าน</string>
    <string name="login_password_hint">รหัสผ่าน</string>
    <string name="login_button">เข้าสู่ระบบ</string>
    <string name="login_invalid_username_password">กรุณากรอกชื่อผู้ใช้และรหัสผ่านให้ครบ</string>
    <string name="login_before_submit">กรุณาล็อกอินเข้าสู่ระบบร้านก่อนส่งงาน</string>
    <string name="login_default_error_message">เข้าสู่ระบบไม่สำเร็จ กรุณาลองใหม่อีกครั้ง</string>

    <!-- UnfinishTask -->ServiceFragment
    <string name="unfinish_task">งานที่ยังทำไม่เสร็จ</string>
    <string name="unfinish_task_button_start_new_job">เริ่มงานใหม่</string>
    <string name="unfinish_task_unsend">งานที่เสร็จแล้วแต่ยังค้างส่ง</string>
    <string name="unfinish_task_confirm_delete">คุณต้องการลบหรือไม่?</string>
    <string name="unfinish_task_number">งานที่</string>


    <!-- Service -->
    <string name="service_store">ร้าน</string>
    <string name="service_step_1">ขั้นตอนที่1 : กรอกรายละเอียดลูกค้า</string>
    <string name="service_step_2">ขั้นตอนที่2 : ภาพถ่าย</string>
    <string name="service_step_3">ขั้นตอนที่3 : รับรองงาน</string>
    <string name="service_step_4">ขั้นตอนที่4 : แบบสอบถาม</string>
    <string name="service_step_5">ขั้นตอนที่5 : ยืนยันการส่งข้อมูล</string>

    <string name="service_button_save">บันทึกข้อมูล</string>
    <string name="service_button_previous">ส่วนก่อนหน้านี้</string>
    <string name="service_button_next">ส่วนถัดไป</string>
    <string name="service_button_confirm">ยืนยัน</string>
    <string name="service_button_cancel">ยกเลิก</string>
    <string name="service_button_ok">ตกลง</string>

    <string name="service_title_usage_info">ข้อมูลการใช้งาน</string>
    <string name="service_title_customer_info">ข้อมูลลูกค้าเบื้องต้น</string>
    <string name="service_title_customer_sign">ลงชื่อลูกค้า</string>
    <string name="service_title_customer_sign_edit">ลงชื่อลูกค้าตัวบรรจง</string>
    <string name="service_title_technician_sign">ลงชื่อช่างบริการ</string>
    <string name="service_title_technician_sign_edit">ลงชื่อช่างบริการตัวบรรจง</string>
    <string name="service_title_confirm_submittion">ยืนยันการส่งข้อมูล</string>

    <string name="service_radio_caption_owner">เจ้าของรถ</string>
    <string name="service_radio_caption_user">ผู้ใช้รถ</string>

    <string name="service_select_title">เลือกรุ่นรถ</string>

    <string name="service_hint_job_type">ประเภทงาน</string>
    <string name="service_hint_product">สินค้า</string>
    <string name="service_hint_model">รุ่นรถ</string>
    <string name="service_hint_job_id">เลขที่งานบริการ : OJxx-xxxx-xxxx</string>
    <string name="service_hint_other">อื่นๆโปรดระบุ</string>
    <string name="service_hint_name">ชื่อ - นามสกุล</string>
    <string name="service_hint_tel_1">เบอร์โทรศัพท์ 1</string>
    <string name="service_hint_tel_2">เบอร์โทรศัพท์ 2</string>
    <string name="service_hint_machine_number">หมายเลขรถ</string>
    <string name="service_hint_engine_number">หมายเลขเครื่อง</string>
    <string name="service_hint_working_hours">ชั่วโมงการทำงาน</string>
    <string name="service_hint_point_service">พิกัดที่อยู่จุดบริการ</string>
    <string name="service_hint_addrss_service">ที่อยู่จุดบริการ</string>
    <string name="service_hint_addrss_customer">ที่อยู่ลูกค้า</string>

    <string name="service_image_1_engine_number">หมายเลขเครื่อง</string>
    <string name="service_image_2_working_hours">ชั่วโมงการทำงาน</string>
    <string name="service_image_3_machine">ช่างกับรถลูกค้า</string>
    <string name="service_image_4_customer_with_machine">ลูกค้ากับรถลูกค้า</string>

    <string name="service_confirm_suggesttion">ข้าพเจ้าได้รับคำแนะนำเป็นที่เข้าใจอย่างดีแล้ว</string>
    <string name="service_confirm_give_suggesttion">ข้าพเจ้าได้ให้คำแนะนำแก่ลูกค้าให้เป็นที่เข้าใจอย่างดีแล้ว</string>

    <string name="service_hint_total_cost">ยอดค่าอะไหล่</string>
    <string name="service_hint_signature">ลายมือชื่อ</string>
    <string name="service_hint_signature_edit">ลงชื่อตัวบรรจง</string>
    <string name="service_hint_date">วว/ดด/ปปปป</string>
    <string name="service_hint_customer_name">ชื่อลูกค้า</string>
    <string name="service_hint_technician_name">ชื่อผู้ให้บริการ</string>
    <string name="service_hint_remark">หมายเหตุ</string>

    <string name="service_confirm_text">ระบบจะส่งข้อมูลหลังจากกดปุ่มยืนยัน กรุณาตรวจสอบ ข้อมูลและการเชื่อมต่ออินเตอร์เน็ตของท่าน หากไม่ สามารถเชื่อมต่ออินเตอร์เน็ตได้ ระบบจะทำการบันทึก ข้อมูลอัตโนมัติ และส่งเข้าระบบอีกครั้ง เมื่อมีการเชื่อมต่อ</string>
    <string name="service_toast_complete">complete</string>

    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid lat long used</string>
    <string name="no_address_found">no address found</string>
    <string name="no_geocoder_available">no geocoder available</string>
    <string name="address_found">address found</string>
    <string name="service_setting_gps">การเข้าถึงตำแหน่ง GPS ของคุณถูกปิดอยู่ กรุณาเปิดการเข้าถึงตำแหน่ง</string>
    <string name="service_leave_confirm_message">คุณต้องการออกจากระบบหรือไม่</string>
    <string name="service_save_task">คุณต้องการบันทึกงานใหม่นี้หรือไม่</string>
    <string name="service_add_address">+เพิ่มที่อยู่ลูกค้า (กรณีมีการเปลี่ยนแปลง)</string>
    <string name="service_remove_address">-ลบที่อยู่</string>

    <!-- "Yout GPS seems to be disabled, do you want to enable it?"-->


    <!-- Popup -->
    <string name="service_popup_success_title">สำเร็จ!!</string>
    <string name="service_popup_fail_title">มีข้อผิดพลาด!</string>
    <string name="service_popup_success_message">ข้อมูลถูกส่งเข้าระบบแล้ว</string>
    <string name="service_popup_fail_message">ข้อมูลไม่สามารถส่งเข้าระบบได้</string>


    <!-- Survey -->
    <string name="survey_title_confirm_continue">คุณต้องการทำ\nแบบสอบถามต่อหรือไม่</string>
    <string name="survey_button_yes">ใช่</string>
    <string name="survey_button_no">ไม่</string>
    <string name="survey_title">แบบสอบถามที่ 1</string>
    <string name="survey_submit_confirm_title">ยืนยันส่งแบบสอบถาม</string>
    <string name="survey_finish_message">จบการทำงาน ขอบคุณค่ะ</string>
    <string name="title_activity_service">ServiceActivity</string>

    <!--Sign pad-->
    <string name="sign_pad_clear_button">ลบทั้งหมด</string>
    <string name="sign_pad_save_button">บันทึกลายมือชื่อ</string>
    <string name="sign_pad_total_sparepart_cost">สรุปยอดค่าอะไหล่</string>
    <string name="sign_pad_customer_signature">ลายมือชื่อลูกค้า</string>
    <string name="sign_pad_technician_signature">ลายมือชื่อผู้ให้บริการ</string>
    <string name="sign_pad_remark">หมายเหตุ</string>
    <string name="sign_pad_not_complete">กรุณาลงลายมือชื่อให้เรียบร้อยก่อนบันทึก</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_service_fragment">Service</string>
    <string name="hello_blank_fragment">Unfinish Task</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_test_drag_marker">TestDragMarkerActivity</string>
    <string name="title_activity_maps_dragable">MapsDragableActivity</string>


    <string name="menu_legalnotices">Legal Notices</string>
    <string name="map_select_location">เลือกตำแหน่งที่อยู่</string>
    <string name="map_address_not_found">ไม่พบที่อยู่</string>
    <string name="map_service_location">จุดให้บริการ</string>

    <!--Result-->
    <string name="result_no_internet">กรุณาเชื่อมต่ออินเตอร์เน็ต</string>
    <string name="result_submit_failed">ส่งข้อมูลไม่สำเร็จ กรุณาลองใหม่อีกครั้ง</string>


    <string name="google_maps_key_release">AIzaSyD2WbUqD-tKSNlGVIPUBx4Y0ZBGn11Q7w0</string>
    <string name="google_maps_key_debug">AIzaSyDib0hl63S4iG1m9oGTJ4tzjk5kU19oS5o</string>

</resources>
