...
            style="@style/LinearLayoutTextView">
            <ImageView
                android:layout_width="2dp"
                style="@style/ImageIconStyle"/>

            <EditText
                android:id="@+id/editTextTotalCost"
                android:hint="@string/service_hint_total_cost"
                style="@style/EditTextStyle"
                android:inputType="numberDecimal"
                android:tag="required"/>
            <TextView
                android:id="@+id/requireEngineNumber"
...
            android:button="@drawable/radio_button_state"
            android:drawableLeft="@android:color/transparent"
            android:drawablePadding="10dp"
            android:text="@string/service_confirm_suggesttion"
            android:textIsSelectable="false"
            android:background="@android:color/transparent"
            android:id="@+id/checkBoxUserAccept"
            android:tag="required"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
...
                        android:text="@string/service_hint_signature_edit"/>
                </LinearLayout>


                <com.joooonho.SelectableRoundedImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/imageCustomerSignature"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="100dp"
                    android:layout_centerInParent="true"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="false"
...
            android:button="@drawable/radio_button_state"
            android:drawableLeft="@android:color/transparent"
            android:drawablePadding="10dp"
            android:textIsSelectable="false"
            android:background="@android:color/transparent"
            android:text="@string/service_confirm_give_suggesttion"
            android:id="@+id/checkBoxTecnicianAccept"
            android:tag="required"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
...
                        android:text="@string/service_hint_signature_edit"/>
                </LinearLayout>


                <com.joooonho.SelectableRoundedImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/imageTechnicianSignature"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="100dp"
                    android:layout_centerInParent="true"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="false"
...
                <LinearLayout
                    style="@style/LinearLayoutTextView">
                    <ImageView
                        android:src="@drawable/signature_type_icon"
                        style="@style/ImageIconStyle"/>
                    <EditText
                        android:id="@+id/editTextTechnicianName"
                        android:hint="@string/service_hint_technician_name"
                        style="@style/EditTextStyle"
                        android:tag="required"/>
                    <TextView
                        style="@style/textViewAstericStyle"
                        android:text="*"/>
...
