<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:gravity="center">

    <TextView
        style="@style/TextTitleOrangeStyle"
        android:text="@string/survey_title"
        android:textSize="23dp"
        android:id="@+id/titleTextView"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/light_gray_border"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_gray"
        android:textSize="15dp"
        android:text="คุณคิดว่าการบริการดีหรือไม่"
        android:id="@+id/detailTextView"
        android:textAlignment="center"/>


    <RadioGroup
        android:id="@+id/choicesGroup"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="0dp">
        <th.co.siamkubota.kubota.utils.ui.CenterRadioButton
            android:id="@+id/yesButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:button="@drawable/button_questionaire_good_state"/>
        <th.co.siamkubota.kubota.utils.ui.CenterRadioButton
            android:id="@+id/noButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:button="@drawable/button_questionaire_bad_state"/>

    </RadioGroup>


</LinearLayout>
